--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header> <input id="inpt" type="text" placeholder=" Please Type 4516 or 4527 " > <button type="submit" onclick="hit()"  >YAZDIM DEVREM</button></header>
+    <header> <input id="inpt" type="text" placeholder=" Please Type 4516 or 4527 " > <button type="submit" onclick="hit()"  >Okki Dokki</button></header>
     <div id="container">
         <!-- <div class="box"></div>
         <div class="box"></div>
